# superquadric-grasp-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  superquadric-grasp-demo.xml
app/conf/: config.ini
app/lua/: README.md  grasping_funcs.lua  grasping_main.lua  grasping_root_fsm.lua
app/script/: experiment-1.xml.template  grasp-demo.xml.template  superquadric-grasp-demo.xml.template
doxygen/: generate.txt
doxygen/doc/html/: annotated.html  classGraspDemo.html  classes.html  classgraspDemo__IDL.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d6d9cae02a256ab35e2be3d8803e4934.html  files.html  functions.html  functions_func.html  graspDemo__IDL_8h_source.html  group__superquadric-grasp-demo.html  index.html  main_8cpp_source.html  modules.html
doxygen/doc/html/search/: all_0.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  groups_0.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classGraspDemo.tex  classgraspDemo__IDL.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d6d9cae02a256ab35e2be3d8803e4934.tex  group__superquadric-grasp-demo.tex  modules.tex  refman.tex
doxygen/doc/xml/: classGraspDemo.xml  classgraspDemo__IDL.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d6d9cae02a256ab35e2be3d8803e4934.xml  graspDemo__IDL_8h.xml  group__superquadric-grasp-demo.xml  index.xml  main_8cpp.xml  namespacestd.xml  namespaceyarp_1_1dev.xml  namespaceyarp_1_1math.xml  namespaceyarp_1_1os.xml  namespaceyarp_1_1sig.xml  superquadric-grasp-demo_8dox.xml
doxygen/generated-from-xml/: superquadric-grasp-demo.dox
idl_dox/: graspDemo_IDL.h
src/: idl.thrift  main.cpp
